# quantum_machine_learning

./: .gitignore  README.md  pyproject.toml
configs/: config_quanv_nn.yaml  config_quclassi.yaml
notebooks/: experiment.ipynb  quclassi.ipynb  ssskm_parallel_dense_layer.ipynb
quantum_machine_learning/: dataset.py  utils.py
quantum_machine_learning/dataset_gallery/: dataset_gallery.py
quantum_machine_learning/encoders/: base_encoder.py  x_encoder.py  yz_encoder.py
quantum_machine_learning/example_package/: example.py
quantum_machine_learning/gate/: s_swap_gate.py
quantum_machine_learning/layers/: base_layer.py  base_learnable_layer.py  base_parametrised_layer.py  dual_qubit_unitary_layer.py  entanglement_unitary_layer.py  random_layer.py  single_qubit_unitary_layer.py  ssskm_dense_layer.py  swap_test_layer.py
quantum_machine_learning/layers/blocks/: ssskm_parallel_dense_layer.py
quantum_machine_learning/layers/circuits/: dual_qubit_unitary_layer.py
quantum_machine_learning/layers/circuits/ansatz/: entanglement_unitary_layer.py  random_layer.py  single_qubit_unitary_layer.py  ssskm_dense_layer.py
quantum_machine_learning/layers/circuits/ansatzes/: dual_qubit_unitary_layer.py  entanglement_unitary_layer.py  random_layer.py  single_qubit_unitary_layer.py  ssskm_dense_layer.py
quantum_machine_learning/layers/circuits/base/: base_parametrised_layer.py
quantum_machine_learning/layers/circuits/bases/: base_layer.py  base_parametrised_layer.py
quantum_machine_learning/layers/circuits/feature_maps/: x_angle.py  y_angle.py
quantum_machine_learning/path_getter/: base_path_getter.py  path_getter.py  quanv_nn_path_getter.py  quclassi_path_getter.py
quantum_machine_learning/postprocessor/: postprocessor.py
quantum_machine_learning/preprocess/: preprocess.py
quantum_machine_learning/preprocessor/: preprocessor.py
quantum_machine_learning/quanv_nn/: mh_quanv_layer.py  quanv_layer.py  quanv_nn.py  train.py
quantum_machine_learning/quclassi/: quclassi.py  quclassi_trainer.py  readme.md  train.py
quantum_machine_learning/toch/: torch_trainer.py
quantum_machine_learning/utils/: calculation_utils.py  circuit_utils.py  data_utils.py  utils.py
quantum_machine_learning_utils/encoders/: x_encoder.py  yz_encoder.py
quantum_machine_learning_utils/layers/: base_parametrised_layer.py  dual_qubit_unitary_layer.py  entanglement_unitary_layer.py  random_layer.py  single_qubit_unitary_layer.py
quantum_machine_learning_utils/postprocessor/: postprocessor.py
quantum_machine_learning_utils/preprocessor/: preprocessor.py
quantum_machine_learning_utils/utils/: utils.py
scripts/: train_quanv_nn.py  train_quclassi.py
src/: dataset.py  plain_dataset.py  s_swap_gate.py  utils.py
src/bases/: base_layer.py
src/encoders/: base_encoder.py  x_encoder.py  yz_encoder.py
src/layers/: base_layer.py  base_learnable_layer.py  dual_qubit_unitary_layer.py  entanglement_unitary_layer.py  random_layer.py  single_qubit_unitary_layer.py  swap_test_layer.py
src/q_conv_nn/: q_conv_nn.py  readme.md
src/quanv_nn/: quanv_layer.py  quanv_nn.py  readme.ipynb  readme.md  train.py
src/quclassi/: quclassi.py  quclassi_trainer.py  readme.ipynb  readme.md  train.py
tests/: mocks.py  test_s_swap_gate.py  test_utils.py
tests/test_encoders/: test_base_encoder.py  test_x_encoder.py  test_yz_encoder.py
tests/test_example_packages/: conftest.py  test_example.py  test_example_class.py
tests/test_gate/: test_gate.py
tests/test_layers/: test_base_layer.py  test_base_parametrised_layer.py  test_dual_qubit_unitary_layer.py  test_entanglement_unitary_layer.py  test_random_layer.py  test_single_qubit_unitary_layer.py  test_ssskm_dense_layer.py  test_swap_test_layer.py
tests/test_layers/circuits/: test_dual_qubit_unitary_layer.py  test_entanglement_unitary_layer.py  test_random_layer.py  test_single_qubit_unitary_layer.py  test_ssskm_dense_layer.py
tests/test_layers/test_blocks/: test_ssskm_parallel_dense_layer.py
tests/test_path_getter/: test_quanv_nn_path_getter.py  test_quclassi_path_getter.py
tests/test_postprocessor/: test_postprocessor.py
tests/test_preprocess/: test_preprocess.py
tests/test_q_conv_nn/: test_q_conv_nn.py
tests/test_quanv_nn/: test_quanv_layer.py  test_quanv_nn.py
tests/test_quclassi/: test_quclassi.py  test_quclassi_trainer.py
tests/test_utils/: test_calculation_utils.py  test_circuit_utils.py  test_data_utils.py  test_plain_dataset.py  test_utils.py
(+8 files in other folders)
