[tool.poetry]
name = "quantum machine learning package"
version = "0.1.0"
description = "A small quantum machine learning package"
authors = ["ksk0629 <neko.to.tomodachi.muse@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/example_package"}]
repository = "https://github.com/ksk0629/quantum_machine_leearning"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.12"
qiskit-machine-learning = "0.8.0"
qiskit-algorithms = "^0.3.1"
torch = "^2.5.1"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
pylatexenc = "^2.10"
tqdm = "^4.67.0"

[tool.poetry.scripts]
run_example = "src.example_package.example:main"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
black = "^23.9.1"
jupyter = "^1.1.1"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "add_number: marks tests for add_number function",
    "example_class: marks tests for ExmapleClass Class"
]