[tool.poetry]
name = "quantum machine learning package"
version = "0.1.0"
description = "A small quantum machine learning package"
authors = ["ksk0629 <neko.to.tomodachi.muse@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/example_package"}]
repository = "https://github.com/ksk0629/quantum_machine_leearning"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.12"
qiskit-machine-learning = "^0.8.2"
qiskit-algorithms = "^0.3.1"
matplotlib = "^3.10.1"
pylatexenc = "^2.10"
tqdm = "^4.67.1"
qiskit = "^1.4.2"
torch = "^2.6.0"
torchvision = "^0.21.0"

[tool.poetry.scripts]
run_example = "src.example_package.example:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
sphinx = "^8.2.3"
black = "^25.1.0"
jupyter = "^1.1.1"
notebook = "^7.3.3"
mypy = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "add_number: marks tests for add_number function",
    "example_class: marks tests for ExmapleClass Class"
]